--- a/css/login_style.css
+++ b/css/login_style.css
@@ -183,12 +183,12 @@
     
     .btn {
         width: 150px;
-        background-color: #992024;
+        background-color: #fff;
         border: none;
         outline: none;
         height: 49px;
         border-radius: 49px;
-        color: #fff;
+        color: #992024;
         text-transform: uppercase;
         font-weight: 600;
         margin: 50px 0 15px;
@@ -196,9 +196,9 @@
         transition: 0.5s;
     }
     
-    .btn:hover {
-        background-color: #754446;
-    }
+    /* .btn:hover {
+        background-image: linear-gradient(90deg, #b94a4e 10%, #fff 100%, #b94a4e 10%);
+    } */
     
     .title {
         font-size: 50px;
@@ -348,9 +348,7 @@
     }
     
     .container.sign-in-mode .logo {
-        top: 9%;
-        left: 180%;
-        width: 150px;
+        display: none;
     }
     
     .container.sign-in-mode .right_panel {
@@ -365,15 +363,16 @@
         left: 75%;
     }
     
-    @media only screen and (max-width: 1750px) and (min-width: 1600px) {
+    /* @media only screen and (max-width: 1750px) and (min-width: 1600px) {
         .container::before {
-            width: 1850px;
-            height: 1850px;
+            width: 2000px;
+            height: 2000px;
             top: -10%;
         }
         .container.container.sign-in-mode::before {
-            width: 1850px;
-            height: 1850px;
+            width: 2000px;
+            height: 2000px;
+            left: -55%;
         }
         .right_panel img {
             width: 700px;
@@ -389,16 +388,17 @@
         }
     }
     
-    @media only screen and (max-width: 1600px) and (min-width: 1200px) {
+    @media only screen and (max-width: 1600px) and (min-width: 1500px) {
         .container::before {
-            width: 1600px;
-            height: 1600px;
+            width: 2000px;
+            height: 2000px;
             top: -10%;
         }
         .container.sign-in-mode::before {
-            width: 1400px;
-            height: 1600px;
+            width: 2000px;
+            height: 2000px;
             top: -10%;
+            left: -60%;
         }
         .right_panel img {
             width: 580px;
@@ -434,6 +434,18 @@
             left: 80%;
         }
     }
+    @media only screen and (max-width: 1500px) and (min-width: 1400px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -65%;
+        }}
     
     @media only screen and (max-width: 1200px) and (min-width: 1000px) {
         .container::before {
@@ -506,4 +518,470 @@
             max-width: 240px;
             margin: 4px;
         }
+    } */
+    @media only screen and (max-width: 1920px) and (min-width: 1800px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -45%;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
     }
+    @media only screen and (max-width: 1800px) and (min-width: 1700px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -50%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 80%;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+    }
+    @media only screen and (max-width: 1700px) and (min-width: 1600px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -55%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 80%;
+        }
+        .left_panel_2 .content p {
+            font-size: 16.5px;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .right_panel img {
+            width: 700px;
+        }
+    }
+    @media only screen and (max-width: 1600px) and (min-width: 1500px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -60%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 82%;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .left_panel_2 .content h3 {
+            font-size: 27.5px;
+            
+        }
+        .left_panel_2 .content p {
+            font-size: 15.5px;
+        }
+        .left_panel_2 img {
+            width: 550px;
+        }
+        .right_panel img {
+            width: 600px;
+        }
+        
+    }
+    @media only screen and (max-width: 1500px) and (min-width: 1400px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -72%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 82%;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .left_panel_2 .content h3 {
+            font-size: 24px;
+            
+        }
+        .left_panel_2 .content p {
+            font-size: 14px;
+        }
+        .left_panel_2 img {
+            width: 550px;
+        }
+        .right_panel img {
+            width: 590px;
+        }
+    }
+    @media only screen and (max-width: 1400px) and (min-width: 1300px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -80%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 82%;
+        }
+        .left_panel_2 img {
+            width: 600px;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .left_panel_2 .content h3 {
+            font-size: 20px;
+            
+        }
+        .left_panel_2 .content p {
+            font-size: 13.5px;
+        }
+        .right_panel img {
+            width: 580px;
+        }
+    }
+    @media only screen and (max-width: 1300px) and (min-width: 1200px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -95%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 82%;
+        }
+        .left_panel_2 img {
+            width: 550px;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .left_panel_2 .content h3 {
+            font-size: 20px;
+            
+        }
+        .left_panel_2 .content p {
+            font-size: 12.5px;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 79%;
+        }
+        .right_panel img {
+            width: 560px;
+        }
+    }
+    @media only screen and (max-width: 1200px) and (min-width: 1100px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -110%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 82%;
+        }
+        .left_panel_2 img {
+            width: 500px;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .left_panel_2 .content h3 {
+            font-size: 20px;
+            
+        }
+        .left_panel_2 .content p {
+            font-size: 11.5px;
+        }
+        .right_panel img {
+            width: 540px;
+        }
+    }
+    
+    
+    @media only screen and (max-width: 1100px) and (min-width: 1000px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: 20%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: 20%;
+            left: -135%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 77%;
+        }
+        .left_panel_2 img {
+            width: 400px;
+        }
+        .title {
+            font-size: 40px;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .left_panel_2 .content h3 {
+            font-size: 18.5px;
+            
+        }
+        .left_panel_2 .content p {
+            font-size: 10.5px;
+        }
+        .right_panel img {
+            width: 480px;
+        }
+
+    }
+    @media only screen and (max-width: 1000px) and (min-width: 900px) {
+        .container::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+        }
+        .container.sign-in-mode::before {
+            width: 2000px;
+            height: 2000px;
+            top: -10%;
+            left: -155%;
+        }
+        .container.sign-in-mode .form_panel {
+            left: 79%;
+        }
+        .left_panel_2 img {
+            width: 300px;
+        }
+        .title {
+            font-size: 30px;
+        }
+        .profile_image {
+            width: 120px;
+            height: 120px;
+        }
+        .left_panel_2 .content {
+            margin-top: 40px;
+        }
+        .left_panel_2 .content h3 {
+            font-size: 16.5px;
+            
+        }
+        .left_panel_2 .content p {
+            font-size: 9.5px;
+        }
+        .right_panel img {
+            width: 420px;
+        }
+    }
+    @media (max-width: 900px) {
+         .container {
+          min-height: 900px;
+          height: 100vh;
+        }
+        .container:before {
+            width: 1500px;
+            height: 1500px;
+            transform: translateX(-50%);
+            left: 30%;
+            bottom: 68%;
+            right: initial;
+            top: initial;
+            transition: 2s ease-in-out;
+          }
+          .right_panel img {
+            width: 350px;
+            position: absolute;
+            top: 20%;
+            right: 10%;
+          }
+          .logo {
+              display: none;
+          }
+         .right_panel h3,
+         .right_panel p {
+             display: none;
+         }
+         .right_panel button {
+             display: none;
+         }
+         .form_panel {
+             position: absolute;
+             top: 60%;
+             left: 50%;
+             width: 100%;
+             height: 100vh;
+             z-index: 4;
+         }
+         .title {
+             font-size: 22px;
+             margin-bottom: 20px;
+         }
+         .profile_image {
+             width: 100px;
+             height: 100px;
+         }
+         .btn {
+             margin-top: 20px;
+         }
+         .input-field {
+             margin-top: 5px;
+         }
+         .container.sign-in-mode::before {
+            display: none;
+        }
+        
+        .container.sign-in-mode .logo {
+            display: none;
+        }
+        
+        .container.sign-in-mode .right_panel {
+            display: none;
+        }
+        
+        .container.sign-in-mode .left_panel_2 {
+            display: none;
+        }
+        
+        .container.sign-in-mode .form_panel {
+            display: none;
+        }
+        .left_panel_2 img {
+            display: none;
+        }
+        /*.signin-signup {
+          width: 100%;
+          top: 95%;
+          transform: translate(-50%, -100%);
+          transition: 1s 0.8s ease-in-out;
+        }
+      
+        .signin-signup,
+        .container.sign-up-mode .signin-signup {
+          left: 50%;
+        }
+      
+        .panels-container {
+          grid-template-columns: 1fr;
+          grid-template-rows: 1fr 2fr 1fr;
+        }
+      
+        .panel {
+          flex-direction: row;
+          justify-content: space-around;
+          align-items: center;
+          padding: 2.5rem 8%;
+          grid-column: 1 / 2;
+        }
+      
+        .right-panel {
+          grid-row: 3 / 4;
+        }
+      
+        .left-panel {
+          grid-row: 1 / 2;
+        }
+      
+        .image {
+          width: 200px;
+          transition: transform 0.9s ease-in-out;
+          transition-delay: 0.6s;
+        }
+      
+        .panel .content {
+          padding-right: 15%;
+          transition: transform 0.9s ease-in-out;
+          transition-delay: 0.8s;
+        }
+      
+        .panel h3 {
+          font-size: 1.2rem;
+        }
+      
+        .panel p {
+          font-size: 0.7rem;
+          padding: 0.5rem 0;
+        }
+      
+        .btn.transparent {
+          width: 110px;
+          height: 35px;
+          font-size: 0.7rem;
+        }
+      
+        
+      
+        .container.sign-up-mode:before {
+          transform: translate(-50%, 100%);
+          bottom: 32%;
+          right: initial;
+        }
+      
+        .container.sign-up-mode .left-panel .image,
+        .container.sign-up-mode .left-panel .content {
+          transform: translateY(-300px);
+        }
+      
+        .container.sign-up-mode .right-panel .image,
+        .container.sign-up-mode .right-panel .content {
+          transform: translateY(0px);
+        }
+      
+        .right-panel .image,
+        .right-panel .content {
+          transform: translateY(300px);
+        }
+      
+        .container.sign-up-mode .signin-signup {
+          top: 5%;
+          transform: translate(-50%, 0);
+        } */
+      }
+    
+    
