--- a/css/login_style.css
+++ b/css/login_style.css
@@ -196,7 +196,18 @@
         transition: 0.5s;
     }
     .color {
-         background-color: #8b181b;
+        width: 150px;
+        background-color: #992024;
+        border: none;
+        outline: none;
+        height: 49px;
+        border-radius: 49px;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 600;
+        margin: 50px 0 15px;
+        cursor: pointer;
+        transition: 0.5s;
      }
     /* .btn:hover {
         background-image: linear-gradient(90deg, #b94a4e 10%, #fff 100%, #b94a4e 10%);
