--- a/css/profile.css
+++ b/css/profile.css
@@ -123,172 +123,10 @@ textarea {
     position: relative;
 }
 
-.create-card {
-    border-top: 0px solid #8b1818;
-    border-bottom: 0px solid #8b1818;
-    border-radius: 50%;
-    margin: 0 auto;
-    display: block;
-    height: 250px;
-    width: 250px;
-    background: url(https://s-media-cache-ak0.pinimg.com/736x/3a/1f/02/3a1f02c10700daa80655a302c5a27acf.jpg);
-    background-size: cover;
-    overflow: hidden;
-    box-shadow: 0 0 100px 10px #fff;
-    /* transition: all ease 0.3s; */
-}
-
-.create-card:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-.profile-card-header img {
-    border-radius: 50%;
-    margin: 20px auto;
-    display: block;
-    width: 200px;
-    border: 5px solid #fff;
-}
-
-.profile-card {
-    border-top: 0px solid #8b1818;
-    border-bottom: 0px solid #8b1818;
-    border-radius: 50%;
-    margin: 0 auto;
-    display: block;
-    height: 250px;
-    width: 250px;
-    /* background-color: #8b1818; */
-    background: url(https://s-media-cache-ak0.pinimg.com/736x/3a/1f/02/3a1f02c10700daa80655a302c5a27acf.jpg);
-    background-size: cover;
-    overflow: hidden;
-    box-shadow: 0 0 100px 10px #fff;
-    transition: all ease 0.3s;
-    /* mix-blend-mode: overlay; */
-}
-
-.profile-card:hover {
-    border-top: 4px solid #8b1818;
-    border-bottom: 4px solid #8b1818;
-    border-radius: 5px;
-    height: 480px;
-    width: 350px;
-    box-shadow: 0 0 70px 10px #fff;
-}
-
-.profile-card .profile-card-header {
-    text-align: center;
-}
-
-.profile-card .profile-card-header h1 {
-    position: relative;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-    font-size: 25px;
-    line-height: 25px;
-    display: inline-block;
-    padding: 10px;
-    transition: all ease 0.250s;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    text-transform: capitalize;
-}
-
-.profile-card:hover .profile-card-header h1 {
-    margin-top: 0px;
-    outline: 0 solid #fff;
-    border-top: 0px solid #fff;
-    border-bottom: 1px solid #fff;
-}
-
-.profile-card .profile-card-header h2 {
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
-    font-size: 17px;
-    font-weight: normal;
-    line-height: 0px;
-    margin-top: 20px;
-    text-transform: capitalize;
-}
-
-.profile-card .profile-card-header span {
-    border-radius: 20px;
-    /* border: 2px white solid; */
-    width: 150px;
-    height: 30px;
-    display: block;
-    margin: 50px auto 0;
-    padding: 5px 10px 5px 10px !important;
-    transition: all linear 1.5s;
-    color: #fff;
-    font-size: 14px;
-    background: red;
-    text-transform: capitalize;
-    /* opacity: 1; */
-    /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.42) 49%, rgba(0, 0, 0, 0.61) 100%); */
-}
-
-.profile-social-links {
-    position: relative;
-    margin-top: -440px;
-    margin-left: -100px;
-    list-style-type: none;
-    opacity: 0;
-    transition: all ease 0.5s;
-}
-
-.profile-card:hover .profile-social-links {
-    margin-left: 10px;
-    margin-top: -350px;
-    opacity: 1;
-}
-
-.profile-social-links li img {
-    width: 30px;
-    background: #fff;
-    border-radius: 50%;
-    padding: 5px;
-}
-
-.profile-social-links a {
-    text-decoration: none;
-    position: relative;
-}
-
-.profile-social-links li a::after {
-    content: attr(data-text);
-    position: absolute;
-    color: white;
-    width: 70px;
-    height: 30px;
-    font-size: 12px;
-    background: red;
-    line-height: 30px;
-    text-align: center;
-    border-radius: 10px;
-    top: -200%;
-    left: 70%;
-    display: none;
-    transition: ease 0.5s;
-}
-
-.profile-social-links li a:hover:after {
-    display: block;
-}
-
-.profile-card:hover .profile-card-header img {
-    animation: profile_image 2000ms linear both;
-    animation-delay: 0.5s;
-}
-
-.registration_popup {
+.registration_profile_popup {
     width: 95%;
     height: 95%;
     background-color: white;
-    /* opacity: 0.5; */
     background: rgb(221, 216, 216);
     position: absolute;
     top: 50%;
@@ -299,22 +137,7 @@ textarea {
     z-index: 2;
 }
 
-.registration_popup_cancel {
-    width: 45px;
-    height: 45px;
-    position: absolute;
-    top: -15px;
-    right: -15px;
-    cursor: pointer;
-    transition: all 2s ease-in;
-    /* transform: translate(25%, -25%); */
-}
-
-.cancel:hover {
-    transform: scale(1.1);
-}
-
-.registration_popup_left {
+.registration_profile_popup .registration_popup_left {
     width: 50%;
     height: 100%;
     border: 1px black solid;
@@ -327,7 +150,7 @@ textarea {
     align-items: center;
 }
 
-.registration_popup_right {
+.registration_profile_popup .registration_popup_right {
     width: 50%;
     height: 100%;
     border: 1px black solid;
@@ -341,14 +164,14 @@ textarea {
     align-items: center;
 }
 
-.registration_popup h1 {
+.registration_profile_popup h1 {
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
     opacity: 0.7;
 }
 
-.registration_popup form {
+.registration_profile_popup form {
     width: 100%;
     height: 100%;
     display: flex;
@@ -372,7 +195,7 @@ textarea {
     text-align: center;
 }
 
-.registration_popup .registration_popup_left .form-text {
+.registration_profile_popup .registration_popup_left .form-text {
     width: 50%;
     margin-top: 20px;
     position: relative;
@@ -381,7 +204,7 @@ textarea {
     outline: none;
 }
 
-.registration_popup .registration_popup_right .form-text {
+.registration_profile_popup .registration_popup_right .form-text {
     width: 50%;
     margin-top: 20px;
     position: relative;
@@ -555,238 +378,4 @@ input[type="checkbox" i] {
     display: block;
     text-align: center;
     width: 100%;
-}
-
-.create {
-    font-size: 14px;
-    font-family: 100;
-    background-color: rgb(240, 233, 233);
-    border: 1px #8b181b solid;
-    padding: 10px 20px;
-    border-radius: 20px;
-    cursor: pointer;
-    width: 130px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-@keyframes profile_image {
-    0% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    3.4% {
-        transform: matrix3d(1.032, 0, 0, 0, 0, 1.041, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    4.7% {
-        transform: matrix3d(1.045, 0, 0, 0, 0, 1.06, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    6.81% {
-        transform: matrix3d(1.066, 0, 0, 0, 0, 1.089, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    9.41% {
-        transform: matrix3d(1.088, 0, 0, 0, 0, 1.117, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    10.21% {
-        transform: matrix3d(1.094, 0, 0, 0, 0, 1.123, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    13.61% {
-        transform: matrix3d(1.112, 0, 0, 0, 0, 1.133, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    14.11% {
-        transform: matrix3d(1.114, 0, 0, 0, 0, 1.133, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    17.52% {
-        transform: matrix3d(1.121, 0, 0, 0, 0, 1.124, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    18.72% {
-        transform: matrix3d(1.121, 0, 0, 0, 0, 1.119, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    21.32% {
-        transform: matrix3d(1.12, 0, 0, 0, 0, 1.107, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    24.32% {
-        transform: matrix3d(1.115, 0, 0, 0, 0, 1.096, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    25.23% {
-        transform: matrix3d(1.113, 0, 0, 0, 0, 1.094, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    29.03% {
-        transform: matrix3d(1.106, 0, 0, 0, 0, 1.09, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    29.93% {
-        transform: matrix3d(1.105, 0, 0, 0, 0, 1.09, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    35.54% {
-        transform: matrix3d(1.098, 0, 0, 0, 0, 1.096, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    36.74% {
-        transform: matrix3d(1.097, 0, 0, 0, 0, 1.098, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    41.04% {
-        transform: matrix3d(1.096, 0, 0, 0, 0, 1.102, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    44.44% {
-        transform: matrix3d(1.097, 0, 0, 0, 0, 1.103, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    52.15% {
-        transform: matrix3d(1.099, 0, 0, 0, 0, 1.101, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    59.86% {
-        transform: matrix3d(1.101, 0, 0, 0, 0, 1.099, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    63.26% {
-        transform: matrix3d(1.101, 0, 0, 0, 0, 1.099, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    75.28% {
-        transform: matrix3d(1.1, 0, 0, 0, 0, 1.1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    85.49% {
-        transform: matrix3d(1.1, 0, 0, 0, 0, 1.1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    90.69% {
-        transform: matrix3d(1.1, 0, 0, 0, 0, 1.1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    100% {
-        transform: matrix3d(1.1, 0, 0, 0, 0, 1.1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-}
-
-.profile-card:hover .profile-card-header h1 {
-    animation: name_and_job 1500ms linear both;
-    animation-delay: 0.4s;
-}
-
-@keyframes name_and_job {
-    0% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
-    }
-    1.3% {
-        transform: matrix3d(3.905, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -237.02, 0, 0, 1);
-    }
-    2.55% {
-        transform: matrix3d(4.554, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -182.798, 0, 0, 1);
-    }
-    4.1% {
-        transform: matrix3d(4.025, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -125.912, 0, 0, 1);
-    }
-    5.71% {
-        transform: matrix3d(3.039, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -79.596, 0, 0, 1);
-    }
-    8.11% {
-        transform: matrix3d(1.82, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -31.647, 0, 0, 1);
-    }
-    8.81% {
-        transform: matrix3d(1.581, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -21.84, 0, 0, 1);
-    }
-    11.96% {
-        transform: matrix3d(1.034, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 4.825, 0, 0, 1);
-    }
-    12.11% {
-        transform: matrix3d(1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 5.53, 0, 0, 1);
-    }
-    15.07% {
-        transform: matrix3d(0.947, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 12.662, 0, 0, 1);
-    }
-    16.12% {
-        transform: matrix3d(0.951, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.007, 0, 0, 1);
-    }
-    27.23% {
-        transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.352, 0, 0, 1);
-    }
-    27.58% {
-        transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.121, 0, 0, 1);
-    }
-    38.34% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.311, 0, 0, 1);
-    }
-    40.09% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.291, 0, 0, 1);
-    }
-    50% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.048, 0, 0, 1);
-    }
-    60.56% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.007, 0, 0, 1);
-    }
-    82.78% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    100% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-}
-
-.profile-card:hover ul li:first-child {
-    animation: social_animation 2000ms ease-in-out both;
-    animation-delay: 0.75s;
-}
-
-.profile-card:hover ul li:nth-child(2) {
-    animation: social_animation 2000ms ease-in-out both;
-    animation-delay: 1s;
-}
-
-.profile-card:hover ul li:nth-child(3) {
-    animation: social_animation 2000ms ease-in-out both;
-    animation-delay: 1.25s;
-}
-
-@keyframes social_animation {
-    0% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
-    }
-    1.3% {
-        transform: matrix3d(3.905, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -237.02, 0, 0, 1);
-    }
-    2.55% {
-        transform: matrix3d(4.554, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -182.798, 0, 0, 1);
-    }
-    4.1% {
-        transform: matrix3d(4.025, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -125.912, 0, 0, 1);
-    }
-    5.71% {
-        transform: matrix3d(3.039, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -79.596, 0, 0, 1);
-    }
-    8.11% {
-        transform: matrix3d(1.82, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -31.647, 0, 0, 1);
-    }
-    8.81% {
-        transform: matrix3d(1.581, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -21.84, 0, 0, 1);
-    }
-    11.96% {
-        transform: matrix3d(1.034, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 4.825, 0, 0, 1);
-    }
-    12.11% {
-        transform: matrix3d(1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 5.53, 0, 0, 1);
-    }
-    15.07% {
-        transform: matrix3d(0.947, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 12.662, 0, 0, 1);
-    }
-    16.12% {
-        transform: matrix3d(0.951, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.007, 0, 0, 1);
-    }
-    27.23% {
-        transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.352, 0, 0, 1);
-    }
-    27.58% {
-        transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.121, 0, 0, 1);
-    }
-    38.34% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.311, 0, 0, 1);
-    }
-    40.09% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.291, 0, 0, 1);
-    }
-    50% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.048, 0, 0, 1);
-    }
-    60.56% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.007, 0, 0, 1);
-    }
-    82.78% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    100% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
 }
